--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Welcome to Citizen Science Alpha Blog</title>
+		<title>Trying a pull request - Welcome to Citizen Science Alpha Blog</title>
 	</head>
 	<body>
 
